[package]
name = "invaders-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# optimize for size in release mode
[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
crossterm = "0.25.0"
rand = "0.8.5"
rusty_audio = "1.4.0"
rusty_time = "0.11.3"
tokio = { version = "1.22.0", features = ["full"] }
